# iv-and-woe-python

./: .gitignore  AttributeRelevance.py  Features.py  LICENSE  README.md  analysis.ipynb  intro.py  iv_and_woe_in_python.ipynb  requirements.txt  setup.cfg  significance.ipynb  statistical_significance_of_information_value.ipynb  telco_customer_churn_analysis.ipynb  telco_dataset_eda.ipynb  tutorial.ipynb
examples/: iv_and_woe_in_python.ipynb  short_example.ipynb  statistical_significance_of_information_value.ipynb  telco_customer_churn_analysis.ipynb
py_iv_woe/: AttributeRelevance.py  Features.py  __init__.py
