[metadata]
name = py-iv-and-woe
version = 0.1.0
author = Klaudia Nazarko
author_email = kaludia.nazarko@
description = A package to calcualate Information value (IV) and weight of evidence (WOE)
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/klaudia-nazarko/iv-and-woe-python
project_urls =
    Bug Tracker = https://github.com/klaudia-nazarko/iv-and-woe-python/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Intended Audience :: Information Technology
    Topic :: Scientific/Engineering :: Information Analysis

[options]
package_dir =
packages = find:
python_requires = >=3.6

install_requires =
    matplotlib==3.5.1
    numpy==1.22.3
    packaging==21.3
    pandas==1.4.1
    scipy==1.8.0
    seaborn==0.11.2

[options.packages.find]
where =